2012-03-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/doc2ipf.c (process_line): Don't use assert() because it calls
	int_error().

2012-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.os2: version.o is required for gnuplot_x11.exe.

2012-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL configure.in README.1ST INSTALL FAQ:
	Update for 4.6.0

	* docs/gnuplot.doc: Point to www.gnuplot.info as the URL for all demos.

	* src/show.c src/plot.c config/mingw/Makefile:  
	Enable code that was marked RELEASE_VERSION;
	disable alternative code by marking it DEVELOPMENT_VERSION.

2011-02-29 Bastian Maerkisch  <bmaerkisch@web.de>

	* win/gnuplot.iss: Prepare for 4.6 release.

	* config/mingw/Makefile: New target 'zip' for zip file distribution.

2012-02-25  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in tutorial/tutorial.tex:  Update latex tutorial for version
	4.6 but do not install it by default.

2012-02-25  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/command.c src/misc.c src/plot.c src/plot.h:
	Unterminated blocks (i.e. missing }) in batch mode caused the program
	to erroneously wait for further input or - when commands were streamed
	through a pipe - crash. Fix: display appropriate error message instead.
	Bug #3491904

2012-02-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stats.c: Remove order-dependence of keywords.
	Bug #3491215

2012-02-21  contributed anonymously

	* src/term.c (do_arc): Arcs smaller than 3 degrees were being
	reduced to a single line.  Bug #3490227.

2012-02-21  David Leverton  <dleverton@users.sourceforge.net>
	
	* src/graphics.c (edge_intersect):  Fix a bug that failed to draw a
	pure horizontal or vertical line from out of range that crossed the
	entire range of a plot to terminate on the boundary.
	Bug #3488666

2012-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/graphics.c:  The histogram code was not designed to 