@@ -15,6 +15,7 @@
 "      {nogppoints | gppoints}",
 "      {picenvironment | nopicenvironment}",
 "      {noclip | clip}",
+"      {notightboundingbox | tightboundingbox}",
 "      {background \"<colorpec>\"}",
 "      {size <x>{unit},<y>{unit}}",
 "      {scale <x>,<y>}",
@@ -62,7 +63,10 @@
 " 'clip' crops the plot at the defined canvas size. Default is",
 " 'noclip' by which only a minimum bounding box of the canvas size",
 " is set. Neither a fixed bounding box nor a crop box is set if the",
-" 'plotsize' option is used.",
+" 'plotsize' or 'tightboundingbox' option is used.",
+"",
+" If 'tightboundingbox' is set the 'clip' option is ignored and the",
+" final bounding box is the natural bounding box calculated by tikz.",
 "",
 " 'background' sets the background color to the value specified in",
 " the <colorpec> argument. <colorspec> must be a valid color name or",
